libtaskmanager: assign stream and check null pointer

BUG: 459232
FIXED-IN: 5.26


(cherry picked from commit 8173aff447c6674d952f797314701cab0f54446d)